# BatteryController

./: .gitignore  .gitmodules  .project  .travis.yml  CMakeLists.txt  LICENSE  README.md  bootstrap_arduino.sh  config.h.in  emulator.cpp  mitm-README.txt  mitm-log-filter.txt  mitm.cpp  start_battery_controller-NO-DELAY.sh  start_battery_controller-NO_DELAY.sh  testcan.cpp  util.hpp  valgrind.supp
.github/workflows/: arduino.yml  ubuntu.yml
AutoStartupPi/: start-battery-controller.service  start-openems-edge.service  start_battery_controller.sh  start_openems_edge.sh  stopbatterycontroller.sh  stopopenemsedge.sh  systemd-command-examples.txt
CANDriverInstall/: CANDriverInstall.sh  rc.local.txt
Documents/: TIML_Battery_Project_Install_Docs.ods
bms/: BMS.cpp  BMS.hpp  CMakeLists.txt
bms/test/: CMakeLists.txt  test_BMS.cpp
can/: CMakeLists.txt  DataFrame.cpp  DataFrame.hpp  FrameSink.hpp  LargeDataFrame.cpp  LargeDataFrame.hpp  StandardDataFrame.cpp  StandardDataFrame.hpp
can/messages/: CMakeLists.txt  Message.cpp  Message.hpp
can/messages/Nissan/: BatteryPowerLimits.cpp  BatteryPowerLimits.hpp  BatteryState.cpp  BatteryState.hpp  BatteryStatus.cpp  BatteryStatus.hpp  BatteryVoltsCurrent.cpp  BatteryVoltsCurrent.hpp  CMakeLists.txt  CellVoltageRange.cpp  CellVoltageRange.hpp  CellVoltages.cpp  CellVoltages.hpp  Ids.hpp  Message.cpp  Message.hpp  PackTemperatures.cpp  PackTemperatures.hpp
can/messages/Nissan/test/: CMakeLists.txt  test_BatteryPowerLimits.cpp  test_BatteryState.cpp  test_BatteryStatus.cpp  test_BatteryVoltsCurrent.cpp  test_CellVoltageRange.cpp  test_CellVoltages.cpp  test_PackTemperatures.cpp
can/messages/SINEX/: BatteryLimitsOne.cpp  BatteryLimitsOne.hpp  BatteryLimitsTwo.cpp  BatteryLimitsTwo.hpp  BatteryStatus.cpp  BatteryStatus.hpp  CMakeLists.txt  Ids.hpp  InverterHeartbeat.cpp  InverterHeartbeat.hpp
can/messages/SINEX/test/: CMakeLists.txt  test_BatteryLimitsOne.cpp  test_BatteryLimitsTwo.cpp  test_BatteryStatus.cpp  test_InverterHeartbeat.cpp
can/messages/SMA/: BatteryAlarms.hpp  BatteryErrors.hpp  BatteryEvents.hpp  BatteryIdentity.cpp  BatteryIdentity.hpp  BatteryLimits.cpp  BatteryLimits.hpp  BatteryManufacturer.hpp  BatteryMeasurements.cpp  BatteryMeasurements.hpp  BatteryName.hpp  BatteryState.cpp  BatteryState.hpp  BatterySystemInfo.cpp  BatterySystemInfo.hpp  CMakeLists.txt  Ids.hpp  InverterCommand.cpp  InverterCommand.hpp  InverterIdentity.cpp  InverterIdentity.hpp  InverterManufacturer.hpp  String.cpp  String.hpp
can/messages/SMA/test/: CMakeLists.txt  test_BatteryEvents.cpp  test_BatteryIdentity.cpp  test_BatteryLimits.cpp  test_BatteryMeasurements.cpp  test_BatteryState.cpp  test_BatterySystemInfo.cpp  test_InverterCommand.cpp  test_InverterIdentity.cpp  test_Strings.cpp
can/messages/TSUN/: BatteryCellTempInfo.cpp  BatteryCellTempInfo.hpp  BatteryCellVoltInfo.cpp  BatteryCellVoltInfo.hpp  BatteryForbidden.cpp  BatteryForbidden.hpp  BatteryHWSWVersion.cpp  BatteryHWSWVersion.hpp  BatteryInfo.cpp  BatteryInfo.hpp  BatteryLimits.cpp  BatteryLimits.hpp  BatteryModCapacity.cpp  BatteryModCapacity.hpp  BatteryModTempInfo.cpp  BatteryModTempInfo.hpp  BatteryModVoltInfo.cpp  BatteryModVoltInfo.hpp  BatteryStatus.cpp  BatteryStatus.hpp  CMakeLists.txt  ChargeDischargeCommand.cpp  ChargeDischargeCommand.hpp  EnsembleInformation.cpp  EnsembleInformation.hpp  Ids.hpp  InformationRequest.cpp  InformationRequest.hpp  InverterChargeDischargeCmd.cpp  InverterChargeDischargeCmd.hpp  InverterInfoRequest.cpp  InverterInfoRequest.hpp  InverterSleepAwakeCmd.cpp  InverterSleepAwakeCmd.hpp  SleepAwakeCommand.cpp  SleepAwakeCommand.hpp  SystemEquipment.cpp  SystemEquipment.hpp
can/messages/TSUN/test/: CMakeLists.txt  test_BatteryCellTempInfo.cpp  test_BatteryCellVoltInfo.cpp  test_BatteryForbidden.cpp  test_BatteryInfo.cpp  test_BatteryLimits.cpp  test_BatteryModCapacity.cpp  test_BatteryModTempInfo.cpp  test_BatteryModVoltInfo.cpp  test_BatteryStatus.cpp  test_ChargeDischargeCommand.cpp  test_EnsembleInformation.cpp  test_InformationRequest.cpp  test_InverterChargeDischargeCmd.cpp  test_InverterInfoRequest.cpp  test_InverterSleepAwakeCmd.cpp  test_SleepAwakeCommand.cpp  test_SystemEquipment.cpp
can/messages/Tesla/: CMakeLists.txt  DetailedCellData.cpp  DetailedCellData.hpp
can/messages/Tesla/test/: CMakeLists.txt  test_DetailedCellData.cpp
can/services/: CMakeLists.txt
can/services/Nissan/: CMakeLists.txt  FrameAggregator.cpp  FrameAggregator.hpp  GroupPoller.cpp  GroupPoller.hpp  HappyPoller.cpp  HappyPoller.hpp  MessageFactory.cpp  MessageFactory.hpp
can/services/Nissan/test/: CMakeLists.txt  test_FrameAggregator.cpp  test_GroupPoller.cpp  test_HappyPoller.cpp
can/services/SINEX/: MessageFactory.cpp  MessageFactory.hpp
can/services/SMA/: CMakeLists.txt  MessageFactory.cpp  MessageFactory.hpp
can/services/TSUN/: MessageFactory.cpp  MessageFactory.hpp
can/test/: CMakeLists.txt  test_DataFrame.cpp  test_LargeDataFrame.cpp  test_StandardDataFrame.cpp
cmake/Modules/: FindLibGpiod.cmake  FindSocketCan.cmake
contactor/: CMakeLists.txt  Contactor.cpp  Contactor.hpp
contactor/Nissan/: CMakeLists.txt  LeafContactor.cpp  LeafContactor.hpp
core/: CMakeLists.txt  Callback.hpp  OutputPin.cpp  OutputPin.hpp  Timer.hpp
core/Darwin/: CMakeLists.txt
core/LibGpiod/: CMakeLists.txt  OutputPin.cpp  OutputPin.hpp
core/Linux/: CMakeLists.txt  ConsolePresenter.cpp  ConsolePresenter.hpp  EpollHandler.hpp  EpollTimer.cpp  EpollTimer.hpp
core/SocketCan/: CMakeLists.txt  CanPort.cpp  CanPort.hpp
core/TeensyRelay/: CMakeLists.txt  TeensyRelay.cpp  TeensyRelay.hpp
core/USBInterface/: CMakeLists.txt  USBInterface.cpp  USBInterface.hpp
inverter/: CMakeLists.txt  Inverter.hpp
inverter/SINEX/: CMakeLists.txt  SE-PWS2.cpp  SE-PWS2.hpp
inverter/SMA/: CMakeLists.txt  SunnyBoyStorage.cpp  (+1 more)
logging/: AvgMinMax.cpp  AvgMinMax.hpp  CMakeLists.txt  Hex.hpp  RunningAvg.cpp  RunningAvg.hpp  colors.cpp  colors.hpp  logging.cpp  logging.h  logging.hpp  stream.hpp
monitor/: CMakeLists.txt  Monitor.hpp  monitor.cpp
packs/: CMakeLists.txt
(+68 files in other folders)
